css fix social links not showing

--- a/css/index.css
+++ b/css/index.css
@@ -41,12 +41,17 @@ body {
     padding-left: 20px;
 }
 
+li {
+    display: list-item !important;
+    text-align: -webkit-match-parent !important;
+}
+
 .welcomeTitle a {
     font-family: 'Inter', sans-serif;
     text-decoration: none;
     border-radius: 4px;
     padding: 0.16em 0.3em;
-    margin: -0.2em 0px -0.2em 5px;
+    margin: -0.2em 0 -0.2em 5px;
     line-height: 1.7;
     white-space: nowrap;
 }
